--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,7 @@
       "https://*/*"
    ],
    "update_url": "https://github.com/makfiz/Linkedin-Registration-Helper",
-   "version": "1.01a",
+   "version": "1.01",
    "developer": {
       "name": "Maksym Hlanskov",
       "url": "https://github.com/makfiz"
